bamf (0.3.4-0ubuntu2) UNRELEASED; urgency=low

  * debian/control:
    - Update Bzr-Vcs
    - Build-Depend on dh-autoreconf
  * debian/rules:
    - Call dh_autoreconf

 -- Michael Terry <mterry@ubuntu.com>  Mon, 05 Nov 2012 14:39:47 -0500

bamf (0.3.4-0ubuntu1) quantal-proposed; urgency=low

  [ Timo Jyrinki ]
  * New upstream release.
    - Autoconf: Make libunity-webapps an optional dependency (on by default)
    - Libbamf: Some signal, type and annotation fixes
    - libbamf: gir-annotion fixes and make gi-scanner verbose
    - Autoconf: Exclude generated sources from tarball and fix "make 
      distcheck".
    - BamfMatcher: add support for libreoffice Base, and libreoffice matching 
      tests (LP: #1063862)

  [ Didier Roche ]
  * debian/bamfdaemon.postinst:
    - Fix bamf.index perl script generation to fix UOA g-c-c panel associated
      with empathy. (LP: #1045223)

 -- Didier Roche <didrocks@ubuntu.com>  Wed, 17 Oct 2012 07:49:01 +0200

bamf (0.3.2-0ubuntu1) quantal-proposed; urgency=low

  [ Łukasz 'sil2100' Zemczak ]
  * New upstream release.
    - bamfdaemon crashes in bamf_application_get_supported_mime_types
      (LP: #1058260)
    - Webapps close prematurely (LP: #1051042)
    - Broken UI and no window management (LP: #1053288)

  [ Timo Jyrinki ]
  * Cherry-pick LibreOffice fix (LP: #1026426)

 -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Mon, 01 Oct 2012 16:05:32 +0200

bamf (0.3.0-0ubuntu2) quantal-proposed; urgency=low

  * rebuild against libunity-webapps 2.3.3

 -- Ken VanDine <ken.vandine@canonical.com>  Wed, 19 Sep 2012 12:32:09 -0400

bamf (0.3.0-0ubuntu1) quantal-proposed; urgency=low

  * Note that while technically that update breaks compatibility by 
    dropping some public functions the corresponding code never worked and 
    it has been verified those were not used by any rdepends.
  * debian/control: 
    - Build-Depends on libunity-webapps-dev to prepare the landing of the 
      branch using it