@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=org.ayatana.bamf
-Exec=@LIBEXECDIR@/bamfdaemon
+Exec=@PKGLIBEXECDIR@/bamfdaemon
