@@ -1,2 +1,2 @@
-debian/tmp/usr/lib/bamf
+debian/tmp/usr/lib/*/bamf
 debian/tmp/usr/share/dbus-1/services/
