@@ -3,8 +3,8 @@ Section: libs
 Priority: optional
 Maintainer: Didier Roche <didrocks@ubuntu.com>
 Uploaders: Andrea Veri <and@debian.org>
-Build-Depends: debhelper (>= 8.1.2ubuntu2),
-               cdbs (>= 0.4.90ubuntu9),
+Build-Depends: dbus-x11,
+               debhelper (>= 9),
                dh-autoreconf,
                libglib2.0-dev (>= 2.28.0~),
                libwnck-dev,
@@ -22,7 +22,8 @@ Build-Depends: debhelper (>= 8.1.2ubuntu2),
                gir1.2-gtk-3.0 (>= 3.0.0),
                gir1.2-pango-1.0,
                gir1.2-wnck-3.0,
-               libunity-webapps-dev (>= 2.3.3)
+               libunity-webapps-dev (>= 2.3.3),
+               xvfb,
 Standards-Version: 3.9.3
 Homepage: https://launchpad.net/bamf
 # If you aren't a member of ~unity-team but need to upload packaging changes,
