@@ -1,37 +1,47 @@
 #!/usr/bin/make -f
+# -*- Mode: Makefile; indent-tabs-mode: t -*-
 
-DEB_MAKE_FLAVORS = gtk2 gtk3
-DEB_BUILDDIR = build
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,-z,defs -Wl,--as-needed
 
-include /usr/share/cdbs/1/class/gnome.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/rules/utils.mk
-include /usr/share/cdbs/1/rules/autoreconf.mk
+%:
+	dh $@ --with autoreconf
 
-LDFLAGS += -Wl,-z,defs -Wl,--as-needed
+override_dh_autoreconf:
+	NOCONFIGURE=1 dh_autoreconf ./autogen.sh
 
-DEB_DH_AUTORECONF_ARGS = env -- NOCONFIGURE=1 ./autogen.sh
+override_dh_auto_configure:
+	dh_auto_configure -Bbuild/gtk2 -- --enable-introspection=no \
+	                                  --enable-headless-tests \
+	                                  --disable-webapps \
+	                                  --with-gtk=2
+	dh_auto_configure -Bbuild/gtk3 -- --enable-introspection=no \
+	                                  --enable-gtk-doc \
+	                                  --enable-headless-tests \
+	                                  --with-gtk=3
 
-DEB_CONFIGURE_EXTRA_FLAGS_gtk2 = --with-gtk=2
-DEB_CONFIGURE_EXTRA_FLAGS_gtk3 = --with-gtk=3
-DEB_CONFIGURE_EXTRA_FLAGS += --enable-introspection=no --enable-gtk-doc \
-	--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
-	--enable-headless-tests \
-	$(shell dpkg-buildflags --export=configure) \
-	$(DEB_CONFIGURE_EXTRA_FLAGS_$(cdbs_make_curflavor))
+override_dh_auto_build:
+	dh_auto_build -Bbuild/gtk2
+	dh_auto_build -Bbuild/gtk3
 
-# install flavors on top of each other (gtk3 wins because it is last)
-DEB_MAKE_DESTDIRSKEL = $(cdbs_curdestdir)
+override_dh_auto_clean:
+	dh_auto_clean -Bbuild/gtk2
+	dh_auto_clean -Bbuild/gtk3
 
-DEB_DBG_PACKAGE_bamfdaemon = bamf-dbg
-DEB_DBG_PACKAGE_libbamf0 = bamf-dbg
-DEB_DBG_PACKAGE_libbamf3-0 = bamf-dbg
+override_dh_auto_test:
+	dh_auto_test -Bbuild/gtk2
+	dh_auto_test -Bbuild/gtk3
 
-common-binary-post-install-arch::
+override_dh_auto_install:
+	dh_auto_install -Bbuild/gtk2
+	dh_auto_install -Bbuild/gtk3
 	find debian/tmp/usr/lib -name \*.la -exec rm {} \;
 	find debian/tmp/usr/lib -name \*.a -exec rm {} \;
 
-common-binary-fixup-arch::
-	dh_girepository -pgir1.2-bamf-0.2
+override_dh_install:
+	dh_install --fail-missing
 
-common-binary-predeb-arch:: list-missing
+override_dh_strip:
+	dh_strip --dbg-package=bamf-dbg
+
+override_dh_girepository:
+	dh_girepository -pgir1.2-bamf-0.2
