@@ -3,8 +3,10 @@ bamf (0.3.4-0ubuntu2) UNRELEASED; urgency=low
   * debian/control:
     - Update Bzr-Vcs
     - Build-Depend on dh-autoreconf
+    - Bump needed debhelper to 9 and add some Build-Depends for tests
   * debian/rules:
     - Call dh_autoreconf
+    - Switch to dh9, thereby enabling tests
 
  -- Michael Terry <mterry@ubuntu.com>  Mon, 05 Nov 2012 14:39:47 -0500
 
